--- a/css/main.css
+++ b/css/main.css
@@ -846,17 +846,32 @@ body {
   animation-delay: -0.16s;
 }
 
-.banner h1 {
-  font-size: 40px;
-  margin-bottom: 16px;
-  color: #FFE600;
-  font-family: EY-interstate-regular, sans-serif;
+.wrapper {
+  display: -webkit-box;
+  display: -moz-box;
+  display: box;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -moz-box-orient: vertical;
+  box-orient: vertical;
+  -webkit-box-direction: normal;
+  -moz-box-direction: normal;
+  box-direction: normal;
+  -webkit-flex-direction: column;
+  -moz-flex-direction: column;
+  flex-direction: column;
+  -ms-flex-direction: column;
 }
 
-@media (min-width: 543px) {
-  .banner h1 {
-    padding-left: 8px;
-  }
+.banner h1 {
+  font-size: 40px;
+  margin-top: 4vw;
+  margin-bottom: 4vw;
+  color: #FFE600;
+  font-family: EY-interstate-regular, sans-serif;
 }
 
 @media (min-width: 767px) {
@@ -873,15 +888,7 @@ body {
   display: -moz-flex;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-  -moz-box-align: center;
-  box-align: center;
-  -webkit-align-items: center;
-  -moz-align-items: center;
-  -ms-align-items: center;
-  -o-align-items: center;
-  align-items: center;
-  -ms-flex-align: center;
+  width: 100%;
   -webkit-box-orient: vertical;
   -moz-box-orient: vertical;
   box-orient: vertical;
@@ -892,6 +899,16 @@ body {
   -moz-flex-direction: column;
   flex-direction: column;
   -ms-flex-direction: column;
+  -webkit-box-lines: multiple;
+  -moz-box-lines: multiple;
+  box-lines: multiple;
+  -webkit-flex-wrap: wrap;
+  -moz-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-flex-flow: row wrap;
+  -moz-flex-flow: row wrap;
+  flex-flow: row wrap;
 }
 
 .menu-grid .office {
@@ -939,40 +956,15 @@ body {
   background-size: cover;
 }
 
-@media (min-width: 543px) {
-  .menu-grid {
-    -webkit-box-orient: horizontal;
-    -moz-box-orient: horizontal;
-    box-orient: horizontal;
-    -webkit-box-direction: normal;
-    -moz-box-direction: normal;
-    box-direction: normal;
-    -webkit-flex-direction: row;
-    -moz-flex-direction: row;
-    flex-direction: row;
-    -ms-flex-direction: row;
-    -webkit-box-lines: multiple;
-    -moz-box-lines: multiple;
-    box-lines: multiple;
-    -webkit-flex-wrap: wrap;
-    -moz-flex-wrap: wrap;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-  }
-}
-
-@media (min-width: 767px) {
-  .menu-grid {
-    max-height: 40vh;
-  }
-}
-
 .menu-grid .grid-item {
-  height: 120px;
-  overflow: hidden;
-  box-shadow: 0 5px 35px rgba(0, 0, 0, 0.65);
-  margin-bottom: 8px;
-  width: 100%;
+  -webkit-box-flex: auto;
+  -moz-box-flex: auto;
+  box-flex: auto;
+  -webkit-flex: auto;
+  -moz-flex: auto;
+  -ms-flex: auto;
+  flex: auto;
+  margin: 1vw;
   display: -webkit-box;
   display: -moz-box;
   display: box;
@@ -981,32 +973,27 @@ body {
   display: -ms-flexbox;
   display: flex;
   position: relative;
+  overflow: hidden;
+  width: 100%;
+  height: 120px;
+  box-shadow: 0 5px 35px rgba(0, 0, 0, 0.65);
 }
 
 @media (min-width: 543px) {
   .menu-grid .grid-item {
     width: 46%;
-    height: 200px;
-    margin: 8px auto;
-    border-radius: 4px;
+    height: 272px;
+    margin: .5vw;
   }
 }
 
 @media (min-width: 767px) {
   .menu-grid .grid-item {
-    width: 32%;
-    height: 236px;
+    width: 30%;
   }
 }
 
-@media (min-width: 991px) {
-  .menu-grid .grid-item {
-    width: 32%;
-    height: 272px;
-  }
-}
-
-.menu-grid .section-name {
+.menu-grid .grid-item .section-name {
   color: #333333;
   font-family: EY-interstate-regular, sans-serif;
   font-size: 20px;
@@ -1021,7 +1008,7 @@ body {
   text-align: right;
 }
 
-.menu-grid .text-bg {
+.menu-grid .grid-item .text-bg {
   height: 107px;
   width: 100%;
   position: absolute;
@@ -1030,13 +1017,13 @@ body {
   background-size: cover;
 }
 
-@media (min-width: 991px) {
-  .menu-grid .text-bg {
+@media (min-width: 543px) {
+  .menu-grid .grid-item .text-bg {
     bottom: 0;
   }
 }
 
-.menu-grid .help-text-bg {
+.menu-grid .grid-item .help-text-bg {
   height: 107px;
   width: 100%;
   position: absolute;
@@ -1045,8 +1032,8 @@ body {
   background-size: cover;
 }
 
-@media (min-width: 991px) {
-  .menu-grid .help-text-bg {
+@media (min-width: 543px) {
+  .menu-grid .grid-item .help-text-bg {
     bottom: 0;
   }
 }
@@ -1069,7 +1056,6 @@ body {
   -moz-flex-direction: column;
   flex-direction: column;
   -ms-flex-direction: column;
-  box-shadow: 0 5px 35px rgba(0, 0, 0, 0.65);
 }
 
 .section-content .office {
@@ -1131,8 +1117,8 @@ body {
     -ms-flex-direction: row;
     height: calc(85vh - 66px);
     min-height: 380px;
-    margin: auto 0;
     margin-top: 88px;
+    box-shadow: 0 5px 35px rgba(0, 0, 0, 0.65);
     border-radius: 4px;
   }
 }
@@ -1143,15 +1129,19 @@ body {
 
 @media (min-width: 767px) {
   .section-content .section-image {
-    min-height: 100%;
-    width: 100%;
+    -webkit-box-flex: 1;
+    -moz-box-flex: 1;
+    box-flex: 1;
+    -webkit-flex: 1;
+    -moz-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
+    height: 100%;
     border-radius: 4px 0 0 4px;
   }
 }
 
-.section-content .section-text {
-  width: 100%;
-  min-height: calc(100vh - 256px);
+.section-content .section-info {
   display: -webkit-box;
   display: -moz-box;
   display: box;
@@ -1170,24 +1160,39 @@ body {
   flex-direction: column;
   -ms-flex-direction: column;
   background-color: white;
-  color: #333333;
   padding: 0 16px;
-  overflow: scroll;
+  min-height: calc(100vh - 256px);
 }
 
 @media (min-width: 767px) {
-  .section-content .section-text {
+  .section-content .section-info {
+    -webkit-box-flex: 1;
+    -moz-box-flex: 1;
+    box-flex: 1;
+    -webkit-flex: 1;
+    -moz-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
+    -webkit-box-pack: justify;
+    -moz-box-pack: justify;
+    box-pack: justify;
+    -webkit-justify-content: space-between;
+    -moz-justify-content: space-between;
+    -ms-justify-content: space-between;
+    -o-justify-content: space-between;
+    justify-content: space-between;
+    -ms-flex-pack: justify;
     border-radius: 0 4px 4px 0;
   }
 }
 
-.section-content .section-text h2 {
-  font-family: EY-interstate-regular, sans-serif;
-  margin-top: 16px;
-  margin-bottom: 0;
+.section-content .section-info .cta-text {
+  text-align: center;
+  font-size: 13px;
+  font-style: italic;
 }
 
-.section-content .section-text .buttons {
+.section-content .section-info .buttons {
   display: -webkit-box;
   display: -moz-box;
   display: box;
@@ -1208,7 +1213,7 @@ body {
   margin-top: auto;
 }
 
-.section-content .section-text .section-btn {
+.section-content .section-info .section-btn {
   background: #FFE600;
   color: #333333;
   font-family: EY-interstate-regular, sans-serif;
@@ -1219,12 +1224,12 @@ body {
   border-bottom: 1px solid #c0c0c0;
 }
 
-.section-content .section-text .section-btn:hover {
+.section-content .section-info .section-btn:hover {
   border: 0;
   padding: 16px;
 }
 
-.section-content .section-text .section-btn:active {
+.section-content .section-info .section-btn:active {
   border: 1px solid #c0c0c0;
   padding: 15px;
 }
@@ -1508,6 +1513,11 @@ body {
 
 .carousel .hot-desk .step-08 {
   background: url("../img/step-by-step/hot-desk/step-08.png") no-repeat center center;
+  background-size: contain;
+}
+
+.carousel .hot-desk .step-09 {
+  background: url("../img/step-by-step/hot-desk/step-09.png") no-repeat center center;
   background-size: contain;
 }
 
